[gd_scene load_steps=13 format=3 uid="uid://bneo63uiplbde"]

[ext_resource type="Script" uid="uid://61tamjpp2pna" path="res://_BossStuff/02_BossProjectiles/boss_tornado.gd" id="1_6qm3r"]
[ext_resource type="Texture2D" uid="uid://bdni113svcvmb" path="res://_BossStuff/00_Sprites/boss_sprites/tornado_attack_spritesheet.png" id="2_2cisa"]
[ext_resource type="PackedScene" uid="uid://bb064mi715uwj" path="res://_BossStuff/ScalingShadow/scaling_shadow.tscn" id="3_htwm2"]
[ext_resource type="Shader" uid="uid://mottcjfppnv4" path="res://_BossStuff/ScalingShadow/scaling_shadow.gdshader" id="4_gq5cc"]
[ext_resource type="AudioStream" uid="uid://diaxahptlnnpr" path="res://_BossStuff/01_Assets/01_SoundEffects/tornado_spawn.wav" id="5_gq5cc"]
[ext_resource type="AudioStream" uid="uid://dwxhadpx6papq" path="res://00_Assets/02_SoundEffects/grenade_throw.wav" id="6_8cmbt"]

[sub_resource type="Animation" id="Animation_htwm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fx1ra"]
resource_name = "default"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gq5cc"]
_data = {
&"RESET": SubResource("Animation_htwm2"),
&"default": SubResource("Animation_fx1ra")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cmbt"]
resource_local_to_scene = true
shader = ExtResource("4_gq5cc")
shader_parameter/z = 0.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8cmbt"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_gq5cc")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jks3x"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_8cmbt")

[node name="BossTornado" type="Node2D"]
script = ExtResource("1_6qm3r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -91)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_2cisa")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gq5cc")
}
autoplay = "default"

[node name="ScalingShadow" parent="." instance=ExtResource("3_htwm2")]
show_behind_parent = true
material = SubResource("ShaderMaterial_8cmbt")
scale = Vector2(8, 4)

[node name="TornadoSpawn" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_8cmbt")
volume_db = 8.667

[node name="TornadoShoot" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_jks3x")
volume_db = 10.0
